# nmrdfrommd

./: .gitignore  LONG_DESCRIPTION.rst  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
developers/: README.md
nmrdfrommd/: NMR.py  __init__.py  constants.py  correlation.py  errors.py  fourier.py  geometry.py  relaxation.py  selection.py  units.py  utilities.py
tests/: _test_twomolecules.py  conftest.py  test_autocorrelation.py  test_correlation.py  test_fourier_transform.py  test_geometry.py  test_main.ipynb  test_nmrd_basic.py  test_physics_validation.py  test_relaxation.py  test_selection.py  test_twomolecules.py  test_utilities.ipynb  test_utilities.py  test_verify_entry_errors.py  test_welford.py
tests/datafiles/twomolecules/: .twomolecules.xtc_offsets.npz
